# chernosim

./: .flake8  CHANGELOG.rst  README.md  pyproject.toml  pytest.ini
chernosim/: __init__.py  acquisition.py  utils.py
chernosim/acquisition/: __init__.py  acquisition.py  plotting.py  utils.py
chernosim/etc/: astrometry.cfg  chernosim.yml
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
