[tool.poetry]
name = "sdss-chernosim"
version = "0.1.0-alpha.0"
description = "SDSS guider actor"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/chernosim"
repository = "https://github.com/sdss/chernosim"
documentation = "https://sdss-chernosim.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "chernosim" }
]
include = ["LICENSE.md"]

[tool.poetry.scripts]
# chernosim = "chernosim.__main__:chernosim"

[tool.poetry.dependencies]
python = "^3.8"
sdsstools = ">=0.1.0"
Sphinx = {version="^3.0.0", optional=true}
sdssdb = "^0.4.3"
numpy = "^1.19.2"
astropy = "^4.0.1"
sdss-cherno = {path = "../cherno"}
pandas = "^1.1.2"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]
ipython = ">=7.11.0"
matplotlib = ">=3.1.1"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
Sphinx = {version=">=3.0.0"}
yapf = "^0.30.0"
autopep8 = "^1.5.4"

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.isort]
line_length = 79
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "chernosim"
known_sdss = ["clu", "sdsstools", "sdssdb", "cherno"]
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[tool.coverage.run]
branch = true
include = ["chernosim/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
]

[build-system]
requires = ["poetry-core>=1.0.0a9"]
build-backend = "poetry.core.masonry.api"
